fixed spacing above filter

--- a/app/assets/stylesheets/listings.scss
+++ b/app/assets/stylesheets/listings.scss
@@ -70,6 +70,7 @@ div.content.listing, div.content.detail {
       }
       .filter {
          margin-bottom: 10px;
+         margin-top: 15px;
          padding-bottom: 10px;
          border-bottom: 1px solid #dedede;
          text-align: center;
